Changes to layout, font size, style
The layout didn't work for a post title that wrapped to multiple
lines. Also, I now prefer a smaller font and a wider page.

--- a/_posts/2020-12-7-pyes.md
+++ b/_posts/2020-12-7-pyes.md
@@ -2,7 +2,7 @@
 layout: post
 title: Pyes
 permalink: /pyes
-caption: A reuseable desktop interface for field-programming of Arduino devices.
+caption: Beginnings for a reuseable desktop interface for field-programming of Arduino devices.
 ---
 # Pyes
 Pyes is a desktop application for programming embedded devices. It is currently in release 0.1.0.
